@@ -1189,7 +1189,7 @@ public class ProcessService extends BaseBeanService<Process, ProcessDAO> {
                 document.setPageSize(rectangle);
                 document.open();
                 if (!rowList.isEmpty()) {
-                    Paragraph paragraph = new Paragraph(rowList.get(0).get(0).toString());
+                    Paragraph paragraph = new Paragraph(rowList.getFirst().getFirst().toString());
                     document.add(paragraph);
                     document.add(getPdfTable(rowList));
                 }
@@ -1812,7 +1812,7 @@ public class ProcessService extends BaseBeanService<Process, ProcessDAO> {
     public static List<Process> getAllParentProcesses(Process process) {
         List<Process> parents = new ArrayList<>();
         while (Objects.nonNull(process.getParent())) {
-            parents.add(0, process.getParent());
+            parents.addFirst(process.getParent());
             process = process.getParent();
         }
         return parents;
