@@ -72,7 +72,7 @@ public class CommentServiceIT {
         comment.setCreationDate(new Date());
         comment.setType(CommentType.INFO);
         commentService.save(comment);
-        Comment newComment = commentService.getAll().get(0);
+        Comment newComment = commentService.getAll().getFirst();
         assertEquals("TEST_MESSAGE", newComment.getMessage(), "Comment was not found in database!");
 
         commentService.removeComment(newComment);
